Overflow fixes

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
   margin: 0;
   background-color: #0a0a0a;
   color: white;
-  overflow-x: hidden;
 }
 
 @layer utilities {
